add index survey swagger document
