# app/Http/Controllers/Survey/SurveyController.php
@@ -19,6 +19,70 @@ class SurveyController extends Controller
     {
         $this->middleware('admin');
     }
+  /**
+ * Retrieve surveys based on their status.
+ *
+ * @param string $status The status of the surveys ("archived" or "valid").
+ * @return \Illuminate\Http\JsonResponse
+ *
+ * @OA\Get(
+ *     path="/survey/index/{status}",
+ *     operationId="getSurveysByStatus",
+ *     summary="Get surveys by status",
+ *     tags={"surveys"},
+ *     @OA\Parameter(
+ *         name="status",
+ *         in="path",
+ *         description="Status of the surveys",
+ *         required=true,
+ *         @OA\Schema(
+ *             type="string",
+ *             enum={"archived", "valid"},
+ *         ),
+ *     ),
+ *     @OA\Response(
+ *         response=200,
+ *         description="Successful operation",
+ *         @OA\JsonContent(
+ *             @OA\Property(
+ *                 property="surveys",
+ *                 type="array",
+ *                 @OA\Items(
+ *                     @OA\Property(property="id", type="integer"),
+ *                     @OA\Property(property="ar_name", type="string", nullable=true),
+ *                     @OA\Property(property="en_name", type="string", nullable=true),
+ *                     @OA\Property(property="color", type="string", nullable=true),
+ *                     @OA\Property(property="start_date", type="string", format="date", nullable=true),
+ *                     @OA\Property(property="end_date", type="string", format="date-time", nullable=true),
+ *                     @OA\Property(property="questions_count", type="integer"),
+ *                     @OA\Property(property="notes", type="string", nullable=true),
+ *                     @OA\Property(property="status", type="string"),
+ *                     @OA\Property(
+ *                         property="users",
+ *                         type="array",
+ *                         @OA\Items(
+ *                             @OA\Property(property="id", type="integer"),
+ *                             @OA\Property(property="username", type="string"),
+ *                             @OA\Property(property="name", type="string"),
+ *                             @OA\Property(property="phone", type="string"),
+ *                             @OA\Property(property="directorate_id", type="integer"),
+ *                             @OA\Property(property="city_id", type="integer"),
+ *                             @OA\Property(property="flag", type="string"),
+ *                             @OA\Property(property="certificate", type="string", nullable=true),
+ *                             @OA\Property(property="gender", type="string", enum={"male", "female"}),
+ *                             @OA\Property(property="courses", type="array", @OA\Items(type="string"), nullable=true),
+ *                         ),
+ *                     ),
+ *                 ),
+ *             ),
+ *         ),
+ *     ),
+ *     security={
+     *         {"bearerAuth": {}}
+     *     }
+ * 
+ * )
+ */
     public function index($status)
     {
         if ($status == "archived") {
@@ -29,10 +93,11 @@ class SurveyController extends Controller
         }
         $surveys->filter(function ($survey) {
             $survey->users->filter(function ($user) {
-                $user->courses = json_decode($user->courses);
-                $user->makeHidden('pivot');
+                $user->courses = json_decode($user->courses); 
+                $user->makeHidden(['pivot','created_at','updated_at','role_id']);
                 return $user;
             });
+            $survey->makeHidden(['created_at','updated_at']);
             return $survey;
         });
         return response()->json([
@@ -580,5 +645,21 @@ class SurveyController extends Controller
         return response()->json([
             'message' => 'This survey is active.'
         ]);
+    }
+    public function AddMainTitle(Request $request, Survey $survey)
+    {
+        $this->validate($request, [
+            'main_title' => 'requreid|string',
+            'questions' => 'required|array'
+        ]);
+        $main_title_name = $request->main_title;
+        $main_title = $survey->MainTitles()->create([
+            'name' => $main_title_name
+        ]);
+        $questions = $request->get('questions');
+        $questions->each(function (&$question) use ($survey, $main_title) {
+            $question->setAttribute('survey_id', $survey->id);
+            $question->setAttribute('main_title', $main_title->id);
+        });
     }
 }
